# prolog-knowledge-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: games_clean.csv
docs/: arquitetura.md  dataset.md  decisoes.md  perguntas.md
etl/: clean_dataset.py  download_dataset.py  generate_prolog.py
prolog/: main.pl
prolog/src/: queries.pl  regras.pl
